# mhevcenc

./: CLAUDE.md  CMakeLists.txt
src/mhevcenc/private/: hevc_encode_session.cpp
src/mhevcenc/public/: hevc_encode_session.h
